# mcp-skill-hub

./: .gitignore  README.md  TOOLTIPS_HELP_GUIDE.md  install.py  install.sh  pyproject.toml  workflow_hints.md
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: no-ruflo-dep.yml  tests.yml
agents/: team-arch-analyst.md  team-code-implementer.md  team-github-operator.md  team-human-voice-writer.md  team-mechanical-refactorer.md  team-reviewer.md
commands/: hub-author-plan.md  hub-compact-master-state.md  hub-control.md  hub-execute-plan-step.md  hub-fanout.md  hub-run-plan.md  hub-validate-plan.md  team.md
docker/: docker-compose.searxng.yml  searxng-settings.yml
docs/: README.md  comparison-ruflo.md  compression-policy.md  enforcing-skill-hub-hooks.md  followup-fanout-and-m4-importers.md  installation.md  master-state-compaction.md  multi-harness-integration.md  opencode-feature-request.md  opencode-quickstart.md  plugin-extension-points.md  roadmap.md  unattended.md
docs/advanced/: context-bridge.md  fine-tuning.md  skill-chaining.md
docs/design/: 2026-07-19-staged-context-pipeline.md  deterministic-compression.md  managed-agents-refactor.md  tooling-orchestrator.md
docs/features/: browser-automation.md  hooks.md  learning.md  local-execution.md  profiles.md  semantic-search.md  utilities.md  web-control-panel.md
docs/reference/: architecture.md  config.md  database.md  logs.md  tools.md
docs/superpowers/specs/: 2026-04-14-control-panel-design.md  2026-06-23-llm-wiki-memory-design.md
examples/: plan.schema.yaml  skill-hub-allow.yml
examples/local-skills/: disk-usage.json  git-summary.json  ollama-status.json  port-check.json
examples/plans/: hello_plan.yaml
hooks/: auto-approve.sh  auto-proceed.sh  auto_approve.py  auto_proceed.py  intercept-task-commands.sh  intercept_task_commands.py  post-merge.sh  post-tool-observer.sh  post_tool_observer.py  postcompact.py  postcompact.sh  precompact.py  precompact.sh  prompt-router.sh  prompt_router.py  session-end-real.sh  session-end.sh  session-logger.sh  session-start-enforcer.sh  session_end.py  session_end_real.py  session_start_enforcer.py  stop-failure.sh  stop_failure.py  subagent-observer.sh  subagent_observer.py  verdict_cache.py  worktree-session-stop.sh
plugins/: README.md
plugins/contradiction-detector/: README.md  __init__.py  plugin.json
plugins/contradiction-detector/scripts/: __init__.py  detect_contradictions.py
plugins/contradiction-detector/storage/: schema.sql
plugins/contradiction-detector/templates/: contradiction_prompt.md  detect_task.md
plugins/contradiction-detector/web/: app.py  dashboard_sections.py
plugins/cost-aware-router/: README.md  plugin.json
plugins/cost-aware-router/cost_router/: __init__.py  cost_tracker.py
plugins/cost-aware-router/hooks/: on_tool_call.py
plugins/cost-aware-router/scripts/: estimate_cost.py
plugins/cost-aware-router/storage/: schema.sql
plugins/cost-aware-router/web/: app.py  dashboard_sections.py
plugins/cross-project-knowledge-bridge/: README.md  plugin.json
plugins/cross-project-knowledge-bridge/hooks/: on_session_start.py
plugins/cross-project-knowledge-bridge/scripts/: extract_decisions.py  sync_wiki.py
plugins/cross-project-knowledge-bridge/storage/: schema.sql
plugins/cross-project-knowledge-bridge/web/: __init__.py  app.py  dashboard_sections.py
plugins/feedback-amplifier/: README.md  plugin.json
plugins/feedback-amplifier/hooks/: on_session_end.py  on_skill_activated.py
plugins/memory-export/: README.md  plugin.json  pyproject.toml
plugins/shadow-skill-evolution/: README.md  __init__.py  plugin.json
plugins/wiki-to-skill-generator/: .gitignore  README.md  plugin.json  pyproject.toml
scripts/: _cct-completion.zsh  _cwt-completion.zsh  archive_memory_to_db.py  compression_eval.py  drop_dead_ddl.py  feedback_to_teachings.py  import_agent_scripts_skills.py  import_ruflo_agents.py  import_ruflo_skills.py  restart-mcp.sh  seed_issues.py  seed_labels.sh
skills/: README.md  decision-to-teaching.json
skills/ensemble-review/: SKILL.md
skills/master-state-compaction/: SKILL.md
skills/memory-layer-analysis/: SKILL.md
src/skill_hub/: activity_log.py  background_jobs.py  base_config.py  capabilities.py  cct.py  claude_tasks.py  cli.py  codegraph_context.py  config.py  continuous_sweep.py  cron.py  cwt.py  dashboard.py  dashboard_api.py  dashboard_server.py  discussions_sync.py  doc_extract.py  embeddings.py  envelope.py  feedback_teachings.py  indexer.py  issue_sync.py  lint_canary.py  local_agent.py  log_insights.py  master_state.py  memory_index.py  memory_supersede.py  model_registry.py  ollama_client.py  pii_gate.py  pipeline.py  plugin_curation.py  plugin_hooks.py  plugin_registry.py  policy_export.py  profiles.py  reindex_sweep.py  repl.py  resource_monitor.py  (+19 more)
tests/: bench_search.py  conftest.py  test_active_task_tag.py  test_activity_tool_logging.py  test_agent_io_guidance.py  test_analyze_router_log.py  test_archive_memory_to_db.py  test_async_escalation.py  test_auto_approve_adaptive.py  test_auto_proceed.py  test_auto_teach.py  test_background_jobs.py  test_bandit.py  test_base_config.py  test_cache_prefix_stability.py  test_capabilities.py  test_claude_task_ingest.py  test_close_task_intent.py  test_codegraph_context.py  test_compaction_hooks.py  test_compression.py  test_compression_cascade.py  test_compression_headroom.py  test_config_migration.py  test_context_digest.py  test_continuous_sweep.py  test_control_activity_route.py  test_control_chrome_route.py  test_control_graphcode_route.py  test_control_hooks_route.py  test_control_plugin_update_route.py  test_cron.py  test_dedup_and_autoclose.py  test_degraded_search.py  test_det_first_hotpaths.py  test_discussions_sync.py  test_doc_extract.py  test_drop_dead_ddl.py  test_dynamic_context_lifecycle_none.py  test_effectiveness_filter.py  (+101 more)
tests/autopilot/: test_loop.py
tests/fanout/: test_coordinator.py  test_directive.py  test_prompt_synth.py  test_sources.py
tests/team/: test_policy.py
(+223 files in other folders)
