[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-skill-hub"
version = "0.2.0"
description = "Local MCP server for semantic skill search with usage-based learning"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Carlo Cancellieri" },
]
keywords = ["mcp", "claude", "skills", "semantic-search", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "watchdog>=4.0.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "aiofiles>=23",
    "psutil>=5.9",
    "sqlite-vec>=0.1.6",
    "litellm>=1.52",
    "pyyaml>=6.0",
    "croniter>=3.0",
    "keyring>=24.0",
]

[project.optional-dependencies]
sentence_transformers = ["sentence-transformers>=2.7.0"]
docs = ["markitdown[docx,pdf,pptx,xlsx]>=0.0.1"]
voyage = ["voyageai>=0.3.0"]
# Deterministic, structure-aware content compression (SmartCrusher/log/search/diff).
# Core wheel only — no torch/tree-sitter; structured payloads (JSON, logs, search
# results) compress, but prose/code route to the disabled "Kompress" path and pass
# through unchanged. Install `compression_full` to enable prose/code compression.
compression = ["headroom-ai>=0.27,<1.0"]
# Installs the ML "Kompress" (ModernBERT) and tree-sitter code backends so prose/code
# compression CAN be enabled. They stay OFF until you set compression_ml_enabled /
# compression_code_enabled (the ML path is lossy). Pulls torch + transformers + tree-sitter.
compression_full = ["headroom-ai[ml,code]>=0.27,<1.0"]
all = ["sentence-transformers>=2.7.0", "voyageai>=0.3.0", "headroom-ai[ml,code]>=0.27,<1.0", "markitdown[docx,pdf,pptx,xlsx]>=0.0.1"]

[project.urls]
Repository = "https://github.com/ccancellieri/mcp-skill-hub"

[project.scripts]
skill-hub = "skill_hub.server:main"
skill-hub-cli = "skill_hub.cli:main"
skill-hub-repl = "skill_hub.repl:main"
skill-hub-dashboard = "skill_hub.webapp.__main__:main"
cwt = "skill_hub.cwt:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_hub"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[tool.pytest.ini_options]
# Repo-local config so the suite is reproducible without the developer's
# parent-directory pytest.ini. Runs serially by default for determinism; the
# shared ~/.claude DB is isolated per-process by tests/conftest.py, so add
# `-n auto` locally for speed if you want it.
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short --import-mode=prepend -p no:cacheprovider"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 180
timeout_method = "signal"
markers = [
    "local_only: Tests that should only run on a developer machine (skipped in CI).",
]
filterwarnings = [
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]
